# tornado-pagination

./: README.md  models.py  modules.py  pyproject.toml  server.py
templates/: index.html
templates/uimodules/: pagination.html
