[tool.poetry]
name = "apps"
version = "0.1.0"
description = ""
authors = ["Reganto <tell.reganto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"
peewee = "^3.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
